styles.css
html, body, div, span, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code,
del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var,
b, i,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure,
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
    margin:0;
    padding:0;
    border:0;
    outline:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}
html, body {
    height: 100%;
    overflow: hidden;
}
#mainContainer {
    position: absolute;
    overflow: auto;
}
body {
    font-family: Arial, Helvetica, sans-serif;
    position: absolute;
    overflow: auto;
}
header {
    background-color: black;
    background-image: linear-gradient(180deg, black, rgb(167, 167, 167));
    color: white;
    font-size: 26px;
    height: 80px;
    text-align: center;
}
header ul {
    padding-top: 20px;
}
header ul li {
    display: inline;
}
header ul li a {
    color: white;
    text-decoration: none;
    padding-left: 35px;
    padding-right: 35px;
}
header ul li a:hover {
    font-size: 125%;
    text-decoration: underline;
    color: lightgrey;
}
header ul li a:active {
    color: grey;
}
section {
    width: 100%;
    height: 500px;
}
.black {
    background-color: black;
    color: white;
}
.white {
    background-color: white;
    color: black;
}
#title {
    font-size: 100px;
    text-align: center;
}
#title h1 {
    padding: 150px 0;
}
#selfie {
    display: inline-block;
    margin-left: 150px;
    padding-top: 50px;
    text-align: center;
    vertical-align: top;
    width: 280px;
}
#selfie img {
    border: 2px solid black;
    width: 100%;
}
#about p {
    display: inline-block;
    margin: 50px 150px;
    width: 800px;
}
h2 {
    /* May need to change  */
    font-size: 40px;
    padding: 20px 0;
    text-align: center;
    text-decoration: underline;
}
#sip div {
    margin: 0 auto;
    width: 800px;
}
#sip div p {
    padding: 50px 0 15px 0;
}
#sip div a {
    margin-left: 350px;
}








/* Placeholders */
.imgContainer {
    padding: 30px 200px;
}
.imgTestholder {
    display: inline-block;
    margin: 0 5px;
    height: 300px;
    width: 300px;
}
.red {
    background-color: red;
}
.blue  {
    background-color: blue;
}
#project p{
    text-align: center;
}
#project p a {
    color: white;
}


.slideShow {
    padding: 150px 400px;
}
.slideIcon {
    display: inline-block;
    margin: 0 80px;
    height: 50px;
    width: 50px;
}


/* Social Icons */
.fa {
    border-radius: 50%;
    padding: 8px;
    font-size: 25px;
    width: 25px;
    text-align: center;
    text-decoration: none;
    margin: 10px 2px;
  }
  .fa-twitter {
    background: #55ACEE;
    color: white;
  }
  .fa-linkedin {
    background: #007bb5;
    color: white;
  }
  .fa-instagram {
    background: #125688;
    color: white;
  }
  .fa-github {
    background: black;
    color: white;
  }

